<resources>
    <string name="app_name">Jorge Gas\nManagement</string>
    <string name="title_home">Home</string>
    <string name="title_map">Mapa</string>
    <string name="title_profile">Perfil</string>
    <string name="title_authentication">Jorge Gas</string>
    <string name="button_login">Iniciar sesión</string>
    <string name="jorge_gas">Jorge Gas</string>
    <string name="logo_abastible">Logo Abastible</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="logout">Logout</string>
    <string name="location_required_error">Location services must be enabled to use the app</string>
    <string name="settings">Settings</string>
    <string name="logo_jorge_gas">Logo Jorge Gas</string>
    <string name="logout_button">Logout Button</string>
    <string name="cerrar_modal">cerrar modal</string>
    <string name="permission_denied_explanation">Haz click en settings para otorgar el permiso de localización.</string>
    <string name="perm_request_rationale_title">¡Aviso!</string>
    <string name="perm_request_rationale">Para poder utilizar la aplicación debes aceptar el permiso de ubicación.</string>
    <string name="request_perm_again">ACEPTAR</string>
    <string name="dismiss">CANCELAR</string>
    <string name="crear_usuario">Crear Usuario</string>
    <string name="eliminar_cuenta">Eliminar cuenta</string>
    <string name="perfil">Perfil</string>
    <string name="administrar_cuentas">Administrar cuentas</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="administracion_cuentas">Administración de cuentas</string>
    <string name="title_cuentas">Cuentas</string>
    <string name="nueva_utilidad">Nueva utilidad</string>
    <string name="vista_general">Vista General</string>
    <string name="modo_oscuro">Modo Oscuro</string>
    <string name="modo_claro">Modo Claro</string>
    <string name="acerca_de">Acerca de</string>
    <string name="editar_cuenta">Editar Cuenta</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="esta_ser_una_ventana_para_una_futura_utilidad_a_definir">Esta será una ventana para una futura utilidad a definir</string>
    <string name="esta_ser_la_vista_general">Esta será la vista general</string>
    <string name="administraci_n_de_cuentas">Administración de cuentas</string>
    <string name="mapa_solicitar_permisos">Ir a autorizar permisos</string>
    <string name="data_usuario">data usuario</string>
    <string name="nombre">Nombre</string>
    <string name="apellido_paterno">Apellido paterno</string>
    <string name="apellido_materno">Apellido materno</string>
    <string name="confirmar_password">Reingresa la contraseña</string>
    <string name="confirmar">Confirmar</string>
    <string name="volver">Volver</string>
    <string name="editar_boton">editar boton</string>
    <string name="editar_o_eliminar_cuenta">Edita o elimina esta cuenta</string>
    <string name="editar">Editar</string>
    <string name="eliminar">Eliminar</string>
    <string name="borrar_cuenta">¿Estas seguro que deseas borrar esta cuenta?</string>
    <string name="login_error_cuenta_deshabilitada">Su cuenta se encuentra deshabilitada. Para mayor información contacte a soporte.</string>
    <string name="preference_file_key">com.example.conductor</string>
    <string name="servicio_rastreo_iniciado">Se ha iniciado el servicio de localización</string>
    <string name="servicio_rastreo_detenido">Se ha detenido el servicio de localización</string>
    <string name="volver_a_la_app">Volver a la app</string>
    <string name="stop_location_updates_button_text">Stop receiving location updates</string>
    <string name="start_location_updates_button_text">Start receiving location updates</string>
    <string name="mapa_sin_permisos_autorizados">Mapa sin permisos autorizados</string>
    <string name="rol">Rol</string>
    <string name="iniciar_turno">Iniciar Turno</string>
    <string name="finalizar_turno">Finalizar Turno</string>
    <string name="detener">Detener</string>
    <string name="iniciar">Iniciar</string>
    <string name="login_error_no_internet">No se ha podido iniciar sesión debido a que no hay internet.</string>
    <string name="login_error_credenciales_erroneas">Usuario y/o contraseña incorrectos</string>
    <string name="esta_screen_esta_disponible_para_contenido">Esta screen esta disponible para contenido</string>
    <string name="boton_crear_cuenta">Boton crear cuenta</string>
    <string name="choferes">Choferes</string>
    <string name="peonetas">Peonetas</string>
    <string name="volanteros">Volanteros</string>
    <string name="secretarias">Secretarias</string>
    <string name="administrador">Administradores</string>
    <string name="editar_perfil">Editar perfil</string>
    <string name="buscar">Buscar</string>
    <string name="conductor">Conductor</string>
    <string name="conductores">Conductores</string>
    <string name="todos">Todos</string>
    <string name="cuentas">Cuentas</string>
    <string name="gestion_de_volanteros">Gestion de volanteros</string>
    <string name="inactivos">Inactivos</string>
    <string name="activos">Activos</string>
    <string name="llamar_boton">Boton para llamar</string>
    <string name="notificar_boton">Enviar notificación</string>
    <string name="zoom_out">zoom out</string>
    <string name="apellidos">Apellidos</string>
    <string name="telefono">Teléfono</string>
    <string name="editar_cuentas">Editar cuentas</string>
    <string name="supervisor_volanteros">Supervisor Volanteros</string>
    <string name="call_center">call center</string>
    <string name="sesion_activa_existente">Su cuenta ya esta activa en otro celular.</string>
    <string name="nombreYApellido">Cristóbal Sepúlveda</string>
    <string name="foto_perfil_volantero_seleccionado">Foto de perfil del volantero seleccionado</string>
    <string name="recorrido">Recorrido</string>
    <string name="horaInicio">10:00am</string>
    <string name="horaFin">22:00pm</string>
    <string name="calendario">Calendario</string>
    <string name="sumar10minutos">Sumar diez minutos</string>
    <string name="restar10minutos">Restar diez minutos</string>
    <string name="registro_de_recorridos">Registro de Recorridos</string>
    <string name="aqui_ira_data_de_interes">Aqui se puede poner data de interes</string>
    <string name="barra_de_horarios">Barra de horarios</string>
    <string name="elegir_fecha_mostrar">Fecha: </string>
    <string name="elija_una_fecha">Elija una fecha</string>
    <string name="seleccione_una_fecha_valida">Seleccione una fecha valida</string>
    <string name="seleccione_una_fecha">Seleccione una fecha</string>
    <string name="nombree">Nombre:</string>
    <string name="volanteros_activos_e_inactivos">Volanteros activos e inactivos</string>
    <string name="seleccionar_fecha">Seleccionar fecha</string>
    <string name="no_hay_registros_con_esa_fecha">No hay registro en esa fecha</string>
    <string name="error_al_intentar_obtener_la_lista_de_usuarios_desde_la_nube">Error al intentar obtener la lista de usuarios desde la nube</string>
    <string name="loading">Cargando</string>
    <string name="no_hay_volanteros_activos_en_estos_momentos">No hay volanteros activos en estos momentos</string>
    <string name="cambiar_tipo_de_mapa">Cambiar tipo de mapa</string>
    <string name="verde">Verde</string>
    <string name="amarillo">amarillo</string>
    <string name="rojo">rojo</string>
    <string name="rosado">rosado</string>
    <string name="azul">azul</string>
    <string name="hora">00:00:00</string>
    <string name="falta_material">Falta Material</string>
    <string name="default_notification_channel_id">1</string>
    <string name="login_error_campos_vacios">Por favor, complete ambos campos.</string>
    <string name="no_hay_internet">Hay problemas con tu internet. Intentalo nuevamente</string>
    <string name="iniciar_trasmisi_n">Iniciar trasmisión</string>
    <string name="registro_trayecto_volanteros">Registro de volanteros</string>
    <string name="fecha">Fecha</string>
    <string name="registro_de_volanteros">Registro de volanteros</string>
    <string name="estad_sticas_del_d_a">Estadísticas del día</string>
    <string name="kilometros">Kilometros</string>
    <string name="posible_bloqueo">Error en hayUsuarioLogeado()</string>
    <string name="filtros">Filtros</string>
    <string name="datos_generales_del_dia">Datos generales del dia</string>
    <string name="cantidad_de_volanteros_en_la_jornada">Cantidad de volanteros en la jornada</string>
    <string name="kilometros_recorridos">0.00 Km</string>
    <string name="filtro_de_busqueda">Filtro de busqueda</string>
    <string name="mensaje_filtro_volanteros">Antes de añadir filtros debes de elegir una fecha.</string>
    <string name="filtro_sin_eleccion">Debes de seleccionar al menos un usuario antes de aplicar filtro.</string>
    <string name="login_error_credenciales_incorrectas">El usuario no existe</string>
    <string name="error_al_crear_cuenta_fireauth">Error al crear la cuenta, intente de nuevo.</string>
    <string name="error_al_crear_cuenta_firestore">Error al crear la cuenta, intente de nuevo con un nuevo mail.</string>
    <string name="jorgegas">JorgeGas</string>
    <string name="app">app</string>
    <string name="version">Vers. 1.10</string>
    <string name="primeros_pasos">Primeros pasos</string>
    <string name="primeros_pasos_pregunta">¿Primeros pasos?</string>
    <string name="primeros_pasos_pregunta_contenido">¡Revisa nuestra sección de preguntas  frecuentes!</string>
    <string name="ajustes">Ajustes</string>
    <string name="ver_aquí">Ver Aquí</string>
    <string name="estado_actual">Estado actual</string>
    <string name="el_registro_diario_no_se_guardo">El registro diarío no se guardo con exito. Intentelo Nuevamente.</string>
    <string name="el_registro_diario_se_guardo">El registro diarío se ha guardado con éxito.</string>
    <string name="gestion_de_choferes">Gestion de choferes</string>
    <string name="flecha_baja">flechaBaja</string>
    <string name="reporte_de_volanteros">Reporte de volanteros</string>
    <string name="ver_mas">Ver mas</string>
    <string name="gestion_de_call_center">Gestion de call center</string>
    <string name="tomar_selfie">Tomar Selfie</string>
    <string name="pedir_selfie">Envia una selfie para poder\n\n marcar entrada o salida</string>
    <string name="control_de_asistencia">Control de asistencia</string>
    <string name="entrada">Entrada</string>
    <string name="salida">Salida</string>
    <string name="login_iniciarSesion">Iniciar sesión</string>
    <string name="ver_clave">ver clave</string>
    <string name="titulo_pedido">Ingreso de pedidos</string>
    <string name="bonos_de_responsabilidad">Bonos de\nresponsabilidad</string>
    <string name="boton_volver">volver</string>
    <string name="jorge_coin">Jorge Coin</string>
    <string name="bono_1">Bono 1</string>
    <string name="descripcion_bono_1">Este bono se te otorgará si asistes a lo menos 26 días en el mes y siempre que tengas un 80% o mas de rendimiento en verde</string>
    <string name="bono_2">Bono 2</string>
    <string name="descripcion_bono_2">Este bono se te otorgará si asistes entre 20 a 25 días en el mes y siempre que tengas un 80% o mas de rendimiento en verde</string>
    <string name="bono_3">Bono 3</string>
    <string name="descripcion_bono_3">Este bono se te otorgará si asistes a lo menos 20 días en el mes y siempre que tengas un 70% o mas de rendimiento en verde</string>
    <string name="cargando">cargando...</string>
</resources>