<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.conductor.ui.home.HomeFragment"
        android:label="@string/vista_general"
        tools:layout="@layout/fragment_home"
        />

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.example.conductor.ui.map.MapFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_map"
        />

    <fragment
        android:id="@+id/navigation_administrar_cuentas"
        android:name="com.example.conductor.ui.administrarcuentas.AdministrarCuentasFragment"
        android:label="@string/administracion_cuentas"
        tools:layout="@layout/fragment_administrar_cuentas"
        />

    <fragment
        android:id="@+id/navigation_nueva_utilidad"
        android:name="com.example.conductor.ui.nuevautilidad.NuevaUtilidadFragment"
        android:label="@string/nueva_utilidad"
        tools:layout="@layout/fragment_nueva_utilidad"
        />


</navigation>