<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/containerBackground">

    <TextView
        android:id="@+id/textView_detalleBonosDeResponsabilidad_titulo"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/space_big"
        android:text="@string/bonos_de_responsabilidad"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="@dimen/text_title"
        />

    <ImageView
        android:id="@+id/imageView_detalleBonosDeResponsabilidad_volver"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginEnd="@dimen/space_big"
        android:layout_marginTop="@dimen/space_big"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/baseline_close_24"
        android:contentDescription="@string/boton_volver"/>

    <ImageView
        android:id="@+id/imageView_detalleBonosDeResponsabilidad_jorgeCoin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/space_big"
        android:layout_marginTop="@dimen/space_big"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_detalleBonosDeResponsabilidad_titulo"
        android:src="@drawable/jorge_coin"
        android:contentDescription="@string/jorge_coin"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView_detalleBonosDeResponsabilidad_bono1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView_detalleBonosDeResponsabilidad_jorgeCoin"
        android:layout_marginTop="@dimen/space_medium"
        android:layout_marginHorizontal="@dimen/space_small"
        android:background="@color/white">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            >
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/bono_1"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginTop="@dimen/space_small"
                />
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/descripcion_bono_1"
                android:textAlignment="center"
                android:layout_marginVertical="@dimen/space_small"
                android:layout_marginHorizontal="@dimen/space_small"
                />

            <TextView
                android:id="@+id/textView_detalleBonosDeResponsabilidad_montoBono1"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/cargando"
                android:textAlignment="center"
                android:layout_marginVertical="@dimen/space_small"
                />
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView_detalleBonosDeResponsabilidad_bono2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardView_detalleBonosDeResponsabilidad_bono1"
        android:layout_marginTop="@dimen/space_small"
        android:layout_marginHorizontal="@dimen/space_small">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            >
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/bono_2"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginTop="@dimen/space_small"
                />
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/descripcion_bono_2"
                android:textAlignment="center"
                android:layout_marginVertical="@dimen/space_small"
                android:layout_marginHorizontal="@dimen/space_small"
                />

            <TextView
                android:id="@+id/textView_detalleBonosDeResponsabilidad_montoBono2"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/cargando"
                android:textAlignment="center"
                android:layout_marginVertical="@dimen/space_small"
                />
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView_detalleBonosDeResponsabilidad_bono3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardView_detalleBonosDeResponsabilidad_bono2"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="@dimen/space_small"
        android:layout_marginHorizontal="@dimen/space_small"
        android:layout_marginBottom="@dimen/space_big">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            >
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/bono_3"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginTop="@dimen/space_small"
                />
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/descripcion_bono_3"
                android:layout_marginHorizontal="@dimen/space_small"
                android:textAlignment="center"
                android:layout_marginVertical="@dimen/space_small"
                />

            <TextView
                android:id="@+id/textView_detalleBonosDeResponsabilidad_montoBono3"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/cargando"
                android:textAlignment="center"
                android:layout_marginVertical="@dimen/space_small"
                />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>