<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#f5f5f5">

        <ImageView
            android:id="@+id/imageview_logoAbastible"
            android:layout_width="201dp"
            android:layout_height="70dp"
            android:layout_marginTop="70dp"
            android:contentDescription="@string/logo_abastible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/logo_normal" />

        <ImageView
            android:id="@+id/imageview_logoJorgeGas"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:contentDescription="@string/logo_abastible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="43dp"
            app:layout_constraintTop_toBottomOf="@id/imageview_logoAbastible"
            android:src="@drawable/icono_app_sin_fondo" />

        <ImageView
            android:id="@+id/imageview_logoJorgeGas_border"
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:contentDescription="@string/logo_abastible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/space_big"
            app:layout_constraintTop_toBottomOf="@id/imageview_logoAbastible"
            android:src="@drawable/icono_app_login_border" />
        <TextView
            android:id="@+id/textview_login_iniciarSesion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_big"
            android:text="@string/login_iniciarSesion"
            android:textSize="26dp"
            android:textAppearance="?attr/textAppearanceHeadline6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageview_logoJorgeGas_border"
            />

        <EditText
            android:id="@+id/edittext_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/space_big"
            android:layout_marginTop="@dimen/space_big"
            android:autofillHints="email"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:background="@drawable/edittext_border_login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textview_login_iniciarSesion"/>

        <EditText
            android:id="@+id/edittext_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/space_big"
            android:layout_marginTop="@dimen/space_small"
            android:padding="10dp"
            android:background="@drawable/edittext_border_login"
            android:autofillHints="contraseña"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edittext_email"
            />
        <ImageView
            android:id="@+id/imageView_login_verClave"
            android:src="@drawable/outline_remove_red_eye_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/edittext_password"
            app:layout_constraintTop_toTopOf="@id/edittext_password"
            android:layout_marginEnd="@dimen/space_medium"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/ver_clave" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:backgroundTint="@color/orange"
            android:text="@string/button_login"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edittext_password"
            android:layout_marginHorizontal="@dimen/space_big"
            android:layout_marginTop="@dimen/space_medium"
            />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:indeterminate="true"
            android:contentDescription="@string/loading"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:progressDrawable="@color/orange"
            android:visibility="gone"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>