<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/Container">

    <TextView
        android:id="@+id/textView_formularioNuevoPedido_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/titulo_pedido"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:textSize="@dimen/text_title"
        android:layout_marginTop="@dimen/space_big"
        />

    <include
        android:id="@+id/include_formularioNuevoPedido_detallePedido"
        layout="@layout/card_detalle_pedido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_formularioNuevoPedido_titulo"
        android:layout_marginTop="@dimen/space_big"
        android:layout_marginHorizontal="@dimen/space_big"
         />

    <TextView
        android:id="@+id/button_formularioNuevoPedido_volver"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:text="@string/volver"
        android:textColor="@color/azul"
        android:gravity="center_vertical"
        android:textSize="@dimen/text_medium"
        android:textAppearance="?attr/textAppearanceHeadline6"
        app:layout_constraintBottom_toBottomOf="@+id/button_formularioNuevoPedido_confirmar"
        app:layout_constraintEnd_toStartOf="@id/button_formularioNuevoPedido_confirmar"
        app:layout_constraintTop_toTopOf="@id/button_formularioNuevoPedido_confirmar" />

    <Button
        android:id="@+id/button_formularioNuevoPedido_confirmar"
        android:layout_width="127dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/space_big"
        android:layout_marginEnd="@dimen/space_big"
        android:text="@string/confirmar"
        android:textColor="@color/white"
        android:background="@color/orange"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>